fix: format toolConfig to unshift the fake value  when saving configs

--- a/src/pages/annotationConfig/index.less
+++ b/src/pages/annotationConfig/index.less
@@ -22,8 +22,8 @@
 }
 
 .container {
-  width : 100%;
-  height : 100%;
+  width: 100%;
+  height: 100%;
   .headerBox {
     height: 56px;
     align-items: center;
@@ -56,7 +56,7 @@
     // display: flex;
     // justify-content: flex-start;
     .leftSider {
-      overflow: scroll;
+      overflow: auto;
       width: 596px;
       height: 100%;
       background-color: #fff;
@@ -66,7 +66,6 @@
       position: relative;
       .leftPane {
         width: 100%;
-        height: 100%;
         // background-color: #ddd;
         position: relative;
         // overflow-x: hidden;
@@ -134,12 +133,11 @@
           color: #1b67ff;
         }
       }
-      .leftSiderTitle{
+      .leftSiderTitle {
         font-weight: 400;
         font-size: 18px;
         line-height: 26px;
         /* identical to box height, or 144% */
-
 
         /* 中性色/87% */
 
@@ -160,16 +158,16 @@
         font-size: 18px;
         line-height: 26px;
         color: rgba(0, 0, 0, 0.87);
-        margin-bottom:15px;
+        margin-bottom: 15px;
 
-        display:flex;
-        display:-moz-flex;
-        display:-webkit-flex;
-        display:-ms-flex;
+        display: flex;
+        display: -moz-flex;
+        display: -webkit-flex;
+        display: -ms-flex;
         -ms-flex-direction: row;
         -webkit-flex-direction: row;
         flex-direction: row;
-    }
+      }
     }
 
     .title {
@@ -208,7 +206,7 @@
         }
       }
       .rightContent {
-        height: calc(100vh - 260px);
+        height: calc(100vh - 216px);
       }
       .notMatchBox {
         width: 100%;
